--- a/sth like facebook.html
+++ b/sth like facebook.html
@@ -14,6 +14,24 @@
   h2  { font-family: Tahoma, "Trebuchet MS", "Geneva CE", lucida, sans-serif; color:#365899; font-weight:900;  font-size:1.5em; letter-spacing:1px; line-height:1em; margin:15px }
   
   p,li, blockquote {font-family: "Trebuchet MS", "Geneva CE", lucida, sans-serif; font-size:1em;  line-height:0.5em 1; padding:0.5em 0; margin:15px }
+  .zanr {
+  	color:#365899;
+  	font-size:200%;
+  	font-weight: bold;
+  }
+
+  .hladat {
+  	color:grey;
+  	background-color: white;
+  	max-width: 300px;
+  	min-width: 300px;
+  	border-radius:25px;
+  	padding-left: 50px;
+  	position: absolute;
+  	margin-top: -70px;
+  	margin-left: 800px;
+
+      }
 
       
     </style>
@@ -21,6 +39,7 @@
 <body>
   <div class="content">
     <header>
+     <p class="hladat">Search</p>
       <p class="zanr">Pohádka</p>
     
       <h1>O chytrém ševci a hloupém čertovi</h1>
